--- a/src/sass/3-component/_sidebar.scss
+++ b/src/sass/3-component/_sidebar.scss
@@ -19,7 +19,7 @@
 }
 
 .app-sidebar__overlay {
-	@media(max-width: 768px) {
+	@media(max-width: 767px) {
 		position: fixed;
 		top: 0;
 		left: 0;
